[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipeline-orchestrator"
version = "0.1.0"
description = "YAML-driven pipeline orchestration with resource management and checkpointing"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Pipeline Orchestrator Contributors"}
]
keywords = ["pipeline", "orchestration", "yaml", "resource-management", "checkpoint", "parallel", "gpu"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
]

dependencies = [
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "checkpoint-manager>=0.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
gpu = ["pynvml>=11.0"]
dev = [
]

[project.urls]
Homepage = "https://github.com/yourusername/pipeline-orchestrator"
Repository = "https://github.com/yourusername/pipeline-orchestrator"
Issues = "https://github.com/yourusername/pipeline-orchestrator/issues"

[tool.setuptools]
packages = ["pipeline_orchestrator"]

[tool.setuptools.package-data]
pipeline_orchestrator = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.uv.sources]
checkpoint-manager = { path = "../checkpoint-manager", editable = true }

